# hakai-api-client-py

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yaml  pypi_release.yaml  release.yaml  test.yaml
hakai_api/: Client.py  __init__.py
src/hakai_api/: Client.py
tests/: test_Client.py
