[tool.poetry]
name = "hakai_api"
version = "0.0.0"
description = "Get Hakai database resources using http calls"
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hakai_api"}]
repository = "https://github.com/HakaiInstitute/hakai-api-client-py"

[tool.poetry.dependencies]
python = "^3.8,<=3.11"
pytz = "^2023.3"
requests = "^2.30.0"
requests-oauthlib = "^1.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"
pytest = "^7.3.1"
ruff = "^0.0.265"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
