[project]
name = "hakai_api"
version = "0.0.0"
description = "Get Hakai database resources using http calls"
authors = [
    {name = "Taylor Denouden", email = "taylor.denouden@hakai.org"},
]
repository = "https://github.com/HakaiInstitute/hakai-api-client-py"
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytz>=2023.3",
    "requests>=2.30.0",
    "requests-oauthlib>=1.3.1"
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
